修改启动Log,修复点击内容不能播放问题

--- a/app/src/main/res/layout/bottom_player_state.xml
+++ b/app/src/main/res/layout/bottom_player_state.xml
@@ -41,7 +41,7 @@
         android:marqueeRepeatLimit="marquee_forever"
         android:scrollHorizontally="true"
         android:singleLine="true"
-        android:text="欢迎使用三K彩软件!"
+        android:text="欢迎使用台彩在线!"
         android:textColor="@color/black"
         android:textSize="@dimen/x16" />
 
