--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,36 +6,54 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style> -->
-    
+
 
     <style name="mystyle" parent="android:Animation">
         <item name="@android:windowEnterAnimation">@anim/dialog_enter</item>
         <item name="@android:windowExitAnimation">@anim/dialog_exit</item>
-	</style>
-	
-	<style name="SeekBar_Czf">
+    </style>
 
-    　　        <item name="android:indeterminateOnly">false</item>
+    <style name="SeekBar_Czf">
 
-    　　        <item name="android:progressDrawable">@drawable/po_seekbar</item>
+        　　
+        <item name="android:indeterminateOnly">false</item>
 
-    　　        <item name="android:indeterminateDrawable">@drawable/po_seekbar</item>
+        　　
+        <item name="android:progressDrawable">@drawable/po_seekbar</item>
 
-    　　        <item name="android:minHeight">8dip</item>
+        　　
+        <item name="android:indeterminateDrawable">@drawable/po_seekbar</item>
 
-    　　        <item name="android:maxHeight">8dip</item>
+        　　
+        <item name="android:minHeight">8dip</item>
 
-    　　        <item name="android:thumb">@drawable/shape_seek_bar_thumb</item>
+        　　
+        <item name="android:maxHeight">8dip</item>
 
-    　　        <item name="android:thumbOffset">8dip</item>
+        　　
+        <item name="android:thumb">@drawable/shape_seek_bar_thumb</item>
 
-    　　        <item name="android:focusable">true</item>
+        　　
+        <item name="android:thumbOffset">8dip</item>
 
-    　　</style>
+        　　
+        <item name="android:focusable">true</item>
+
+        　　
+    </style>
 
     <!-- 通知栏样式 -->
     <style name="NotificationText" parent="android:TextAppearance.StatusBar.EventContent" />
 
     <style name="NotificationTitle" parent="android:TextAppearance.StatusBar.EventContent.Title" />
+
+    <!--AppCompatActivity实现全屏设置-->
+    <style name="AppCompatNoTitleBarTheme" parent="Theme.AppCompat.NoActionBar">
+       <!-- <item name="android:windowFullscreen">true</item>-->
+        <item name="colorPrimary">@color/title_color</item>
+        <item name="colorPrimaryDark">@color/title_color</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+    </style>
 
 </resources>
