修复跳转到webview界面会先跳到桌面的问题

--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -32,7 +32,7 @@
         
         <TextView
             android:id="@+id/skip_ad"
-            android:layout_width="@dimen/x60"
+            android:layout_width="wrap_content"
             android:layout_height="@dimen/x30"
             android:background="@drawable/btn_gray_stroke_selector"
             android:layout_alignParentRight="true"
