--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,8 +4,13 @@
      <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/title_color</item>
         <item name="colorPrimaryDark">@color/title_color</item>
+       <!-- <item name="colorPrimaryDark">#696969</item>-->
         <item name="colorAccent">@color/colorAccent</item>
          <item name="android:windowNoTitle">true</item>
+    </style>
+
+    <style name="webview_AppTheme" parent="AppTheme">
+        <item name="colorPrimaryDark">#D8373C</item>
     </style>
 
 
